--- a/app/css/app.css
+++ b/app/css/app.css
@@ -13,7 +13,7 @@ select, textarea {
 .well-title {
   margin-top: 0px;
 }
-.session {
+.personalBest {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
