--- a/app/css/app.css
+++ b/app/css/app.css
@@ -22,6 +22,15 @@ select, textarea {
     user-select: none;
 }
 
+.swimmer {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .votingWidget {
   height: 64px;
   padding: 7px;
